--- a/Frontend/index1.html
+++ b/Frontend/index1.html
@@ -171,7 +171,7 @@
     </footer>
 
     <div class="chatbot-container">
-        <button id="chatbot-fab" class="bg-emerald-500 text-white w-16 h-16 rounded-full flex items-center justify-center shadow-lg hover:bg-emerald-600 transition"><img src="C:\Users\Srijan\OneDrive\Desktop\MannAI-Project\images\logo.png" alt="✨" class="w-12 h-12"></button>
+        <button id="chatbot-fab" class="bg-emerald-500 text-white w-16 h-16 rounded-full flex items-center justify-center shadow-lg hover:bg-emerald-600 transition"><img src="C:\Users\Srijan\OneDrive\Desktop\Frontend\images\logo.png" alt="✨" class="w-12 h-12"></button>
             <div id="chatbot-window" class="chatbot-window bg-white flex flex-col transform scale-0">
             <div class="bg-emerald-500 text-white p-4 rounded-t-lg flex justify-between items-center"><h3 class="font-bold">MannAI Assistant</h3><button id="close-chatbot" class="text-2xl font-bold">&times;</button></div>
             <div class="p-2 bg-gray-100 flex justify-center text-sm"><button id="lang-en" class="px-3 py-1 rounded-md bg-emerald-200 text-emerald-800 font-semibold">English</button><button id="lang-ml" class="px-3 py-1 rounded-md ml-2 text-gray-600">മലയാളം</button></div>
