--- a/Frontend/index1.html
+++ b/Frontend/index1.html
@@ -79,7 +79,7 @@
     <header class="bg-white/80 backdrop-blur-md fixed top-0 left-0 right-0 z-50 shadow-sm">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#hero">
-                <img src="images/mannai_logo.png" alt="MannAI Logo" class="h-12"> </a>
+                <img src="images/mannai_logo.png" alt="MannAI Logo" class="h-14"> </a>
             <nav class="hidden md:flex space-x-8">
                 <a href="#hero" class="text-gray-600 hover:text-emerald-600">Home</a>
                 <a href="#features" class="text-gray-600 hover:text-emerald-600">Features</a>
@@ -122,7 +122,7 @@
     </section>
 
     <section id="features" class="py-20 bg-white">
-        <div class="container mx-auto px-6">
+        <div class="container mx-auto px-6">    
             <div class="text-center mb-12">
                 <h2 class="text-4xl font-bold text-gray-800">Your AI Farming Assistant</h2>
                 <p class="text-gray-600 mt-4 max-w-2xl mx-auto">MannAI provides you with cutting-edge tools to make informed decisions and boost your crop yield.</p>
@@ -171,7 +171,7 @@
     </footer>
 
     <div class="chatbot-container">
-        <button id="chatbot-fab" class="bg-emerald-500 text-white w-16 h-16 rounded-full flex items-center justify-center shadow-lg hover:bg-emerald-600 transition"><img src="C:\Users\Srijan\OneDrive\Desktop\Frontend\images\logo.png" alt="✨" class="w-12 h-12"></button>
+        <button id="chatbot-fab" class="bg-emerald-500 text-white w-16 h-16 rounded-full flex items-center justify-center shadow-lg hover:bg-emerald-600 transition"><img src="images\logo.png" alt="✨" class="w-12 h-12"></button>
             <div id="chatbot-window" class="chatbot-window bg-white flex flex-col transform scale-0">
             <div class="bg-emerald-500 text-white p-4 rounded-t-lg flex justify-between items-center"><h3 class="font-bold">MannAI Assistant</h3><button id="close-chatbot" class="text-2xl font-bold">&times;</button></div>
             <div class="p-2 bg-gray-100 flex justify-center text-sm"><button id="lang-en" class="px-3 py-1 rounded-md bg-emerald-200 text-emerald-800 font-semibold">English</button><button id="lang-ml" class="px-3 py-1 rounded-md ml-2 text-gray-600">മലയാളം</button></div>
