Corrected team name

--- a/Frontend/index1.html
+++ b/Frontend/index1.html
@@ -159,7 +159,7 @@
     
     <footer id="contact" class="bg-gray-800 text-white py-12">
         <div class="container mx-auto px-6 text-center">
-            <p>&copy; SIH TEAM MaanAI</p>
+            <p>&copy; SIH TEAM MannAI</p>
             <p class="text-gray-400">Empowering farmers with the technology of tomorrow.</p>
             <p class="text-gray-400">FrontEnd Developer & Plant Disease Detection - Srijan Jain</p>
             <p class="text-gray-400">System Architect & Weather Detection - Parth Gupta</p>
